--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,21 @@ header {
   padding-left: 120px;
 }
 
+#trust-trig-image {
+  transition: transform 1.5s ease;
+}
+
+#trust-trig-image.issuer-state {
+  transform: rotate(120deg);
+}
+
+#trust-trig-image.verifier-state {
+  transform: rotate(-120deg);
+}
+
+#trust-trig-image.holder-state {
+  transform: rotate(0deg);
+}
 
 /*******************************Imagine*****************************/
 
