--- a/css/style.css
+++ b/css/style.css
@@ -614,6 +614,15 @@ input[type="email"] {
   padding-left: 12px;
 }
 
+#reg-err {
+  color: red;
+  text-align: center;
+  font-size: small;
+  margin-top: 0.3rem;
+  height: 0.4rem;
+}
+
+
 /*
 .card-carousel .my-card:after {
   content: "";
